# waymarks

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
docs/: countries.json  data.geojson  index.html  summits.json
docs/cities/: albania.json  armenia.json  austria.json  belgium.json  czechia.json  denmark.json  egypt.json  estonia.json  finland.json  france.json  germany.json  israel.json  italy.json  japan.json  jordan.json  kazakhstan.json  norway.json  poland.json  portugal.json  russia.json  spain.json  sweden.json  switzerland.json  the_netherlands.json  turkey.json  united_kingdom.json  united_states.json  vatican.json
docs/countries-geo/: russia.json
src/: config.rs  file_ops.rs  geonames.rs  main.rs
src/commands/: cities.rs  mod.rs
src/models/: cities.rs  countries.rs  mod.rs
tests/data/: cities_sample.txt  countryInfo_sample.txt
