[package]
name = "summit-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
geo = "0.30"
gpx = "0.10"
