[package]
name = "waymarks"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
indicatif = "0.18"
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
tokio = { version = "1.0", features = ["full"] }
colored = "3.0"	
zip = "4.5"
